--- a/src/Web/Backoffice/Pages/Sage/Index.cshtml
+++ b/src/Web/Backoffice/Pages/Sage/Index.cshtml
@@ -11,7 +11,9 @@
 <a asp-page-handler="RefreshToken" class="btn btn-default">Refresh Token</a>
 <a asp-page-handler="AccountData" class="btn btn-default">Get Account Data</a>
 <a asp-page-handler="CreateInvoice" class="btn btn-primary">Create Invoice</a>
+
 <hr />
+<h4>Testes: (Usar somente para testes)</h4>
 <form method="post" >
     Url: <input type="text" name="url" />
     <input type="submit" value="Obter Dados" />
