--- a/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
@@ -27,9 +27,9 @@
                                 <label class="form-check-label">
                                     <input asp-for="UserAddress.UseUserAddress" class="form-check-input" type="radio" value="1">
                                     Na sua morada
-                                </label>                                
+                                </label>
                             </div>
-                            <div class="form-check-inline">                                
+                            <div class="form-check-inline">
                                 <label class="form-check-label">
                                     <input asp-for="UserAddress.UseUserAddress" class="form-check-input" type="radio" value="2">
                                     Levantar na nossa loja em Loulé
@@ -95,14 +95,14 @@
                             </div>
                             <div id="damaMapSection">
                                 <div class="text-center">
-                                    <span>Mercado de Loulé, Praça da Republica, Banca Nº 44 - <a class="underline" href="http://saborcomtradicao.com/" target="_blank"> Sabor com Tradição </a></span>                                    
+                                    <span>Mercado de Loulé, Praça da Republica, Banca Nº 44 - <a class="underline" href="http://saborcomtradicao.com/" target="_blank"> Sabor com Tradição </a></span>
                                 </div>
                                 <div class="mt-3">
                                     <iframe width="100%" height="300"
                                             frameborder="0" style="border:0"
                                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB2Av0vyWQSV7OOZK_LdJ3i52TSC8pLPF8&q=Mercado+Municipal+de+Loulé+(Desde+1908)" allowfullscreen></iframe>
                                 </div>
-                            </div>                            
+                            </div>
                             <div class="text-center">
                                 <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#billingSection">Seguinte</button>
                             </div>
@@ -240,6 +240,7 @@
     <input type="hidden" asp-for="DeliveryTime.Min" />
     <input type="hidden" asp-for="DeliveryTime.Max" />
     <input type="hidden" asp-for="DeliveryTime.Unit" />
+    <input type="hidden" asp-for="BasketModel.DefaultShippingCost" />
 </form>
 
 @section Scripts {
